# 8_24

./: CMakeLists.txt  README.md  main.cpp
SFML-2.6.1/: .gitignore  CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  SFMLSharedTargets.cmake  cmake_install.cmake
SFML-2.6.1/lib/: libsfml-audio.so.2.6.1  libsfml-graphics.so.2.6.1  libsfml-network.so.2.6.1  libsfml-system.so.2.6.1  libsfml-window.so.2.6.1
SFML-2.6.1/src/SFML/: Makefile  cmake_install.cmake
SFML-2.6.1/src/SFML/Audio/: Makefile  cmake_install.cmake
SFML-2.6.1/src/SFML/Graphics/: Makefile  cmake_install.cmake
SFML-2.6.1/src/SFML/Network/: Makefile  cmake_install.cmake
SFML-2.6.1/src/SFML/System/: Makefile  cmake_install.cmake
SFML-2.6.1/src/SFML/Window/: Makefile  cmake_install.cmake
